--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.0",
     "lightningcss": "^1.30.1",
     "next": "15.3.5",
     "postcss": "^8.5.6",
