--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.0",
+    "highlight.js": "^11.11.1",
     "lightningcss": "^1.30.1",
     "next": "15.3.5",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-rehype": "^11.1.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/highlight.js": "^9.12.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
