added videos, updated resume, added pictures, added featured project on home, added pizza voice agent project

--- a/src/data/industry-projects.json
+++ b/src/data/industry-projects.json
@@ -5,25 +5,36 @@
       "title": "Agentic AI Loan Application Solution",
       "subtitle": "Enterprise AI Automation for Huntington National Bank",
       "date": "May 2025 - Present",
-      "description": "AI Center of Excellence - Research and development to implement AI solutions across all aspects of banking",
+      "description": "AI Center of Excellence - Research and development to implement AI solutions across all aspects of banking. Generated $400,000 / year with this project by saving time for underwriters on every loan application processed.",
       "extendedDescription": "Developed fully automatic agentic AI loan application processor POC that chats with customers applying for loans, processes documents and natural language input, compares extracted document info to documentation using RAG and stores data in a database. Agents utilize tools and are engineered with considerate context engineering in mind.",
+      "media": {
+        "type": "image",
+        "src": "/projects/huntington/simple-agent.jpg",
+        "alt": "Simple agentic system picture",
+        "poster": "/projects/huntington/simple-agent.jpg",
+        "autoplay": false,
+        "loop": true,
+        "muted": true
+      },
       "skills": [
         { "name": "AWS Bedrock", "category": "Cloud" },
         { "name": "AWS S3", "category": "Cloud" },
         { "name": "AWS Athena", "category": "Cloud" },
         { "name": "AWS Lambda", "category": "Cloud" },
-        { "name": "AWS SageMaker", "category": "Cloud" },
+        { "name": "AWS SageMaker AI", "category": "Cloud" },
         { "name": "LangChain", "category": "Framework" },
         { "name": "LangGraph", "category": "Framework" },
         { "name": "Python", "category": "Language" },
         { "name": "LLMs", "category": "Concept" },
+        { "name": "AI Engineering", "category": "Concept" },
         { "name": "Prompt Engineering", "category": "Concept" },
         { "name": "Agentic AI Systems", "category": "Concept" },
         { "name": "Context Engineering", "category": "Concept" },
         { "name": "Git", "category": "Concept" },
         { "name": "Azure DevOps", "category": "Cloud" },
         { "name": "Science Communication", "category": "Concept" },
-        { "name": "Retrieval-Augmented Generation", "category": "Concept" }
+        { "name": "Retrieval-Augmented Generation", "category": "Concept" },
+        { "name": "Project Presentation", "category": "Concept"}
       ],
       "links": [],
       "impact": "Created a system of AI Agents that can process loan-related documents with the intent of eventually automating the entire loan application process (could save thousdands of dollars and hours)",
@@ -36,13 +47,23 @@
       "date": "May 2025 - Present",
       "description": "Data Science team - Creation and maintenance of machine learning pipelines across the bank",
       "extendedDescription": "Created LLM automation workflows and architecture designs for data science team, authored wiki articles and Python libraries to enable workflow facilitation",
+      "media": {
+        "type": "image",
+        "src": "/projects/huntington/prompt-eng.jpg",
+        "alt": "Prompt engineering image",
+        "poster": "/projects/huntington/prompt-eng.jpg",
+        "autoplay": false,
+        "loop": true,
+        "muted": true
+      },
       "skills": [
         { "name": "Microsoft Copilot", "category": "Tool" },
         { "name": "Prompt Engineering", "category": "Concept" },
         { "name": "Context Engineering", "category": "Concept" },
         { "name": "Model Documentation Processing", "category": "Concept" },
         { "name": "Azure DevOps", "category": "Cloud" },
-        { "name": "Science Communication", "category": "Concept" }
+        { "name": "Science Communication", "category": "Concept" },
+        { "name": "Project Presentation", "category": "Concept"}
       ],
       "links": [],
       "impact": "Automated model documentation processing workflows for the bank's data science team by engineering a Microsoft Copilot workflow",
